--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- About us sections-->
 <section class="section title">
     <div class="container">
-  <h1 class="title hero-title">Эффективные решения
+  <h1 class="hero-title">Эффективные решения
     для вашего бизнеса</h1>
 <button type="button" class="button primary">Заказать услугу</button>
 </div>
