--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
     <section class="section container ">
               <h2 class="visually-hidden">Наши качества</h2>
 <ul class="feacher-list">
-    <li class="item">
+    <li class="item icon-antena">
         <h3 class="section-title-secondary title-uppercase">Внимание к деталям</h3>
         <p class="section-text">Идейные соображения, а также начало
              повседневной
              работы по формированию позиции.</p>
     </li>
-    <li class="item">
+    <li class="item icon-clock">
         <h3 class="section-title-secondary title-uppercase">Пунктуальность</h3>
         <p class="section-text">Задача организации, в особенности 
             же рамки и место обучения кадров
              влечет за собой.</p>
     </li>
-    <li class="item">
+    <li class="item icon-diagram">
         <h3 class="section-title-secondary title-uppercase">Планирование</h3>
         <p class="section-text">Равным образом консультация 
             с широким активом в значительной
              степени обуславливает.</p>
     </li>
-    <li class="item">
+    <li class="item icon-astronaut">
         <h3 class="section-title-secondary title-uppercase">Современные технологии</h3>
         <p class="section-text">Значимость
              этих проблем настолько очевидна, 
