--- a/index.html
+++ b/index.html
@@ -86,10 +86,40 @@
         <div class="container">
         <h2 class="section-title-primary">Наша команда</h2>
         <ul class="team-list">
-            <li class="item"><img src="./img/team/photo1.jpg" alt="фото члена команды" width="270">
+            <li ><img src="./img/team/photo1.jpg" alt="фото члена команды" width="270">
              <div class="card">
                     <h3 class="section-title-secondary">Игорь Демьяненко</h3>
                 <p class="section-team-text">Product Designer</p>
+                <ul  class="card-list">
+                    <li class="item">
+                        <a href="" class="item-card"></a>
+                        <svg  class="item-icon">
+                        <use href="./img/icons/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                    <svg class="item-icon">
+                        <use href="./img/icons/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                    </a>
+                    </li>
+                    <li class="item">
+                        <a href=""class="item-card">
+                        <svg class="item-icon">
+                            <use href="./img/icons/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                        <svg class="item-icon">
+                            <use href="./img/icons/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
             </li>
             <li class="item"><img src="./img/team/photo2.jpg" alt="фото члена команды" width="270">
