--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
         </ul>
     
     <ul class="address-nav">
-        <li class="item"> <a href="mailto:info@devstudio.com" class="address ">info@devstudio.com</a></li>
-        <li class="item"> <a href="tel:+380961111111" class="address">+38 096 111 11 11</a></li>
+        <li class="item"> <a href="mailto:info@devstudio.com" class="address">
+            <svg class="icon-nav" width="16" height="12">
+            <use href="./img/icons/symbol-defs.svg#icon-envelope" ></use>
+        </svg>info@devstudio.com</a></li>
+        <li class="item"> <a href="tel:+380961111111" class="address">
+            <svg class="icon-nav" width="10" height="16">
+            <use href="./img/icons/symbol-defs.svg#icon-phone"></use>
+        </svg>+38 096 111 11 11</a></li>
     </ul>
     </nav>
     </header>
@@ -86,13 +92,13 @@
         <div class="container">
         <h2 class="section-title-primary">Наша команда</h2>
         <ul class="team-list">
-            <li ><img src="./img/team/photo1.jpg" alt="фото члена команды" width="270">
+            <li class="item"><img src="./img/team/photo1.jpg" alt="фото члена команды" width="270">
              <div class="card">
                     <h3 class="section-title-secondary">Игорь Демьяненко</h3>
                 <p class="section-team-text">Product Designer</p>
                 <ul  class="card-list">
                     <li class="item">
-                        <a href="" class="item-card"></a>
+                        <a href="" class="item-card">
                         <svg  class="item-icon">
                         <use href="./img/icons/symbol-defs.svg#icon-instagram"></use>
                         </svg>
@@ -143,6 +149,45 @@
         </ul>
         </div>
     </section>
+    <section class="section">
+        <div class="container">
+            <h2 class="section-title-primary">Постоянные клиенты</h2>
+            <ul class="client-logo">
+                <li class="item">
+                    <svg class="logo-icons" width="44.27" height="49.23">
+                    <use href="./img/icons/symbol-defs.svg#icon-logo-1"></use>
+                    </svg>
+                </li>
+                <li class="item">
+                <svg class="logo-icons" width="40" height="52">
+                    <use href="./img/icons/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+                </li>
+                <li class="item">
+                    <svg class="logo-icons" width="41" height="42.6">
+                        <use href="./img/icons/symbol-defs.svg#icon-logo-3"></use>
+                    </svg>
+                </li>
+                <li class="item">
+                    <svg class="logo-icons" width="79.66" height="42.02">
+                        <use href="./img/icons/symbol-defs.svg#icon-logo-4"></use>
+                    </svg>
+                </li>
+                <li class="item">
+                    <svg class="logo-icons" width="59" height="47">
+                        <use href="./img/icons/symbol-defs.svg#icon-logo-5"></use>
+                    </svg>
+                </li>
+                <li class="item">
+                    <svg class="logo-icons" width="88.48" height="45.44">
+                        <use href="./img/icons/symbol-defs.svg#icon-logo-6"></use>
+                    </svg>
+                </li>
+            </ul>
+    
+        </div>
+    </section>
+
     </main>
    
     <!-- Footer -->
