added sicial lincs icons

--- a/index.html
+++ b/index.html
@@ -132,18 +132,108 @@
              <div class="card">
                 <h3 class="section-title-secondary">Ольга Репина</h3>
                 <p class="section-team-text">Frontend Developer</p>
+                <ul class="card-list">
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
              </div>   
             </li>
             <li class="item"><img src="./img/team/photo3.jpg" alt="фото члена команды" width="270">
             <div class="card">
                 <h3 class="section-title-secondary">Николай Тарасов</h3>
                 <p class="section-team-text">Frontend Developer</p>
+                <ul class="card-list">
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
             </li>
             <li class="item"><img src="./img/team/photo4.jpg" alt="фото члена команды" width="270">
              <div class="card">
                 <h3 class="section-title-secondary">Михаил Ермаков</h3>
                 <p class="section-team-text">UI Designer</p>
+                <ul class="card-list">
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="item-card">
+                            <svg class="item-icon">
+                                <use href="./img/icons/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
             </li>
         </ul>
