added address icons to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,14 @@
             </ul>
     
             <ul class="address-nav">
-                <li class="item"> <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
-                <li class="item"> <a href="tel:+380961111111" class="address">+38 096 111 11 11</a></li>
+                <li class="item"> <a href="mailto:info@devstudio.com" class="address">
+                        <svg class="icon-nav" width="16" height="12">
+                            <use href="./img/icons/symbol-defs.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a></li>
+                <li class="item"> <a href="tel:+380961111111" class="address">
+                        <svg class="icon-nav" width="10" height="16">
+                            <use href="./img/icons/symbol-defs.svg#icon-phone"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </nav>
         </div>
