ended styles icons

--- a/index.html
+++ b/index.html
@@ -292,33 +292,33 @@
         <a href="tel:+380961111111"  class="footer-tel">+38 096 111 11 11</a>
     </address>
        
-    <div class="footer-social-links">
+    <div>
         <p class="link-header">присоединяйтесь</p>
         <ul class="card-list">
             <li class="item">
-                <a href="" class="item-card">
-                    <svg class="item-icon">
+                <a href="" class="footer-card">
+                    <svg class="footer-icon">
                         <use href="./img/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
-                <a href="" class="item-card">
-                    <svg class="item-icon">
+                <a href="" class="footer-card">
+                    <svg class="footer-icon">
                         <use href="./img/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
-                <a href="" class="item-card">
-                    <svg class="item-icon">
+                <a href="" class="footer-card">
+                    <svg class="footer-icon">
                         <use href="./img/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="item">
-                <a href="" class="item-card">
-                    <svg class="item-icon">
+                <a href="" class="footer-card">
+                    <svg class="footer-icon">
                         <use href="./img/icons/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                 </a>
