--- a/portfolio.html
+++ b/portfolio.html
@@ -123,13 +123,13 @@
     </main>
     
     <!-- Portfolio footer -->
-<footer class="footer footer-container">
+<footer class="footer">
     <div class="container">
         <div class="footer-content">
             <address class="footer-address">
                 <a href="./index.html" class="logo footer-logo "><span>Web</span>Studio</a>
-                г. Киев, пр-т Леси Украинки, 26
-
+                <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            
                 <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a>
                 <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a>
             </address>
