--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,8 @@
    
     <!-- Portfolio -->
     <!-- Portfolio header -->
-    <header>
-        <div class="portfolio-border">
-        <nav class="main-nav container">
+    <header class="portfolio-border">
+            <nav class="main-nav container">
             <a href="./index.html" class="logo"><span>Web</span>Studio</a>
     
     
@@ -39,8 +38,7 @@
                         </svg>+38 096 111 11 11</a></li>
             </ul>
         </nav>
-        </div>
-    </header>
+            </header>
     <main>
     <!--  Portfolio section -->
     <section class="section">
