added padding section client-logo

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </section>
     <section class="section">
         <div class="container">
-            <h2 class="section-title-primary">Постоянные клиенты</h2>
+            <h2 class="section-title-primary section-logo">Постоянные клиенты</h2>
             <ul class="client-logo">
                 <li class="item">
                     <svg class="logo-icons" width="44.27" height="49.23">
