added address map

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
          <div class="container">
             <div class="footer-content">
         <address class="footer-address">
-            <a href="./index.html" class="logo footer-logo "><span>Web</span>Studio</a>
+            <a href="https://goo.gl/maps/TNhpPpV4GZ15vKTPA" target="_blank" class="logo footer-logo "><span>Web</span>Studio</a>
         <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
 
         <a href="mailto:info@devstudio.com"  class="footer-mail">info@devstudio.com</a> 
