--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<button type="button" class="button primary">Заказать услугу</button>
 				</div>
 			</section>
-			<section class="section container">
+			<section class="section container section-logo">
 				<h2 class="visually-hidden">Наши качества</h2>
 				<ul class="feacher-list">
 					<li class="item icon-antena">
