--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
 					<h2 class="section-title-primary">Чем мы занимаемся</h2>
 					<ul class="primary-list">
 						<li class="item">
-							<img src="./img/what-we-do/box1.jpg" alt="Ноутбук" width="340" />
+							<img src="./img/what-we-do/box1.jpg" alt="Ноутбук" width="370" />
 						</li>
 						<li class="item">
 							<img
 								src="./img/what-we-do/box2.jpg"
 								alt="мобильный телефон"
-								width="340"
+								width="370"
 							/>
 						</li>
 						<li class="item">
-							<img src="./img/what-we-do/box3.jpg" alt="Планшет" width="340" />
+							<img src="./img/what-we-do/box3.jpg" alt="Планшет" width="370" />
 						</li>
 					</ul>
 				</div>
@@ -330,9 +330,9 @@
 					</ul>
 				</div>
 			</section>
-			<section class="section">
+			<section class="section section-logo">
 				<div class="container">
-					<h2 class="section-title-primary section-logo">Постоянные клиенты</h2>
+					<h2 class="section-title-primary">Постоянные клиенты</h2>
 					<ul class="client-logo">
 						<li class="item">
 							<svg class="logo-icons" width="44.27" height="49.23">
