--- a/portfolio.html
+++ b/portfolio.html
@@ -77,83 +77,115 @@
 					</ul>
 					<ul class="portfolio-list">
 						<li class="item">
-							<img src="./img/portfolio/img1.jpg" alt="Веб-сайт" width="370" />
-							<div class="card">
-								<h3 class="section-title-portfolio">Технокряк</h3>
-								<p class="section-portfolio-text">Веб-сайт</p>
-							</div>
+							<a href="">
+								<img
+									src="./img/portfolio/img1.jpg"
+									alt="Веб-сайт"
+									width="370"
+								/>
+								<div class="card">
+									<h3 class="section-title-portfolio">Технокряк</h3>
+									<p class="section-portfolio-text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img
-								src="./img/portfolio/img2.jpg"
-								alt="Постер New Orlean vs Golden Star"
-								width="370"
-							/>
-							<div class="card">
-								<h3 class="section-title-portfolio">
-									Постер New Orlean vs Golden Star
-								</h3>
-								<p class="section-portfolio-text">Дизайн</p>
-							</div>
+							<a href="">
+								<img
+									src="./img/portfolio/img2.jpg"
+									alt="Постер New Orlean vs Golden Star"
+									width="370"
+								/>
+								<div class="card">
+									<h3 class="section-title-portfolio">
+										Постер New Orlean vs Golden Star
+									</h3>
+									<p class="section-portfolio-text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img
-								src="./img/portfolio/img3.jpg"
-								alt="Ресторан Seafood"
-								width="370"
-							/>
-							<div class="card">
-								<h3 class="section-title-portfolio">Ресторан Seafood</h3>
-								<p class="section-portfolio-text">Приложение</p>
-							</div>
+							<a href="">
+								<img
+									src="./img/portfolio/img3.jpg"
+									alt="Ресторан Seafood"
+									width="370"
+								/>
+								<div class="card">
+									<h3 class="section-title-portfolio">Ресторан Seafood</h3>
+									<p class="section-portfolio-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./img/portfolio/img4.jpg" alt="Наушники" width="370" />
-							<div class="card">
-								<h3 class="section-title-portfolio">Проект Prime</h3>
-								<p class="section-portfolio-text">Маркетинг</p>
-							</div>
+							<a href="">
+								<img
+									src="./img/portfolio/img4.jpg"
+									alt="Наушники"
+									width="370"
+								/>
+								<div class="card">
+									<h3 class="section-title-portfolio">Проект Prime</h3>
+									<p class="section-portfolio-text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./img/portfolio/img5.jpg" alt="Коробки" width="370" />
-							<div class="card">
-								<h3 class="section-title-portfolio">Проект Boxes</h3>
-								<p class="section-portfolio-text">Приложение</p>
-							</div>
+							<a href="">
+								<img src="./img/portfolio/img5.jpg" alt="Коробки" width="370" />
+								<div class="card">
+									<h3 class="section-title-portfolio">Проект Boxes</h3>
+									<p class="section-portfolio-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./img/portfolio/img6.jpg" alt="Веб-сайт" width="370" />
-							<div class="card">
-								<h3 class="section-title-portfolio">
-									Inspiration has no Borders
-								</h3>
-								<p class="section-portfolio-text">Веб-сайт</p>
-							</div>
+							<a href="">
+								<img
+									src="./img/portfolio/img6.jpg"
+									alt="Веб-сайт"
+									width="370"
+								/>
+								<div class="card">
+									<h3 class="section-title-portfolio">
+										Inspiration has no Borders
+									</h3>
+									<p class="section-portfolio-text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./img/portfolio/img7.jpg" alt="Книга" width="370" />
-							<div class="card">
-								<h3 class="section-title-portfolio">Издание Limited Edition</h3>
-								<p class="section-portfolio-text">Дизайн</p>
-							</div>
+							<a href="">
+								<img src="./img/portfolio/img7.jpg" alt="Книга" width="370" />
+								<div class="card">
+									<h3 class="section-title-portfolio">
+										Издание Limited Edition
+									</h3>
+									<p class="section-portfolio-text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img src="./img/portfolio/img8.jpg" alt="Лейбл" width="370" />
-							<div class="card">
-								<h3 class="section-title-portfolio">Проект LAB</h3>
-								<p class="section-portfolio-text">Маркетинг</p>
-							</div>
+							<a href="">
+								<img src="./img/portfolio/img8.jpg" alt="Лейбл" width="370" />
+								<div class="card">
+									<h3 class="section-title-portfolio">Проект LAB</h3>
+									<p class="section-portfolio-text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="item">
-							<img
-								src="./img/portfolio/img9.jpg"
-								alt="Приложение"
-								width="370"
-							/>
-							<div class="card">
-								<h3 class="section-title-portfolio">Growing Business</h3>
-								<p class="section-portfolio-text">Приложение</p>
-							</div>
+							<a href="">
+								<img
+									src="./img/portfolio/img9.jpg"
+									alt="Приложение"
+									width="370"
+								/>
+								<div class="card">
+									<h3 class="section-title-portfolio">Growing Business</h3>
+									<p class="section-portfolio-text">Приложение</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
